--- a/eShop/server/package.json
+++ b/eShop/server/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "mern-stack-api",
+  "name": "e-shop-mintic",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
-  },
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
+},  
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,6 +20,6 @@
     "mongoose": "^5.9.29"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.15"
   }
 }
